--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
               </figure>
               <figure class="feature-icon timeline-icon">
                 <div class="animation-band animation-end-delay"></div>
-                <figcaption class="feature-caption">지연 종료(end-delay)</figcaption>
+                <figcaption class="feature-caption">종료 지연(end-delay)</figcaption>
               </figure>
               <figure class="feature-icon timeline-icon">
                 <div class="animation-band animation-change"></div>
