표준 문법 체크 및 반영

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -41,7 +41,7 @@
     <div class="content">
       <header class="header">
         <a class="logo" href="/">
-          <img class="anime-mini-logo" src="assets/img/anime-mini-logo.svg" />
+          <img class="anime-mini-logo" src="assets/img/anime-mini-logo.svg" alt />
           <span class="version-number"></span>
         </a>
       </header>
@@ -1689,7 +1689,7 @@ var domNode = function () {
                   <td>정보(Info)</td>
                 </thead>
                 <tr>
-                  <td><code>Number</code>, <code>String</code>
+                  <td><code>Number</code>, <code>String</code></td>
                   <td>속성 값과 동일, <a href="#unitlessValue" class="color-values">값(values)</a> 섹션 참조</td>
                 </tr>
               </table>
@@ -3450,7 +3450,7 @@ timeline.seek(timeStamp);
         <!-- -->
 
         <!-- 이징 -->
-        <article id="easings" class="color-easings">
+        <article id="color-easings">
           <header>
             <h2 class="demos-title">이징(Easings)</h2>
           </header>
@@ -3545,12 +3545,12 @@ timeline.seek(timeStamp);
                   <td><code>'easeInBack'</code></td>
                   <td><code>'easeOutBack'</code></td>
                   <td><code>'easeInOutBack'</code></td>
-                <tr>
+                </tr>
                 <tr>
                   <td><code>'easeInBounce'</code></td>
                   <td><code>'easeOutBounce'</code></td>
                   <td><code>'easeInOutBounce'</code></td>
-                <tr>
+                </tr>
               </table>
             </div>
             <div class="demo-content penner-equations-demo">
@@ -3892,7 +3892,7 @@ timeline.seek(timeStamp);
         <!-- -->
 
         <!-- 헬퍼 -->
-        <article id="easings" class="color-helpers">
+        <article id="helpers" class="color-helpers">
           <header>
             <h2 class="demos-title">헬퍼(Helpers)</h2>
           </header>
