--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
           <div class="feature-description-icons">
             <nav class="feature-icons-container horizontal-icons secondary-menu">
               <a href="https://github.com/juliangarnier/anime/" class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-github.svg" />
+                <img src="documentation/assets/img/icons/icon-github.svg" alt />
                 <figcaption class="feature-caption">GitHub</figcaption>
               </a>
               <a href="https://codepen.io/collection/XLebem/" class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-codepen.svg" />
+                <img src="documentation/assets/img/icons/icon-codepen.svg" alt />
                 <figcaption class="feature-caption">CodePen</figcaption>
               </a>
               <a href="documentation" class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-docs.svg" />
+                <img src="documentation/assets/img/icons/icon-docs.svg" alt />
                 <figcaption class="feature-caption">Docs</figcaption>
               </a>
               <a href="https://twitter.com/JulianGarnier" class="feature-icon" target="_blank">
-                <img src="documentation/assets/img/icons/icon-twitter.svg" />
+                <img src="documentation/assets/img/icons/icon-twitter.svg" alt />
                 <figcaption class="feature-caption">Twitter</figcaption>
               </a>
             </nav>
@@ -156,27 +156,27 @@
           <div class="feature-description-icons">
             <div class="feature-icons-container vertical-icons">
               <figure class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-staggering-forward.svg" />
+                <img src="documentation/assets/img/icons/icon-staggering-forward.svg" alt />
                 <figcaption class="feature-caption">forward</figcaption>
               </figure>
               <figure class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-staggering-index.svg" />
+                <img src="documentation/assets/img/icons/icon-staggering-index.svg" alt />
                 <figcaption class="feature-caption">from index</figcaption>
               </figure>
               <figure class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-staggering-center.svg" />
+                <img src="documentation/assets/img/icons/icon-staggering-center.svg" alt />
                 <figcaption class="feature-caption">from center</figcaption>
               </figure>
               <figure class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-staggering-easing.svg" />
+                <img src="documentation/assets/img/icons/icon-staggering-easing.svg" alt />
                 <figcaption class="feature-caption">easing</figcaption>
               </figure>
               <figure class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-staggering-reverse.svg" />
+                <img src="documentation/assets/img/icons/icon-staggering-reverse.svg" alt />
                 <figcaption class="feature-caption">reversed</figcaption>
               </figure>
               <figure class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-staggering-grid.svg" />
+                <img src="documentation/assets/img/icons/icon-staggering-grid.svg" alt />
                 <figcaption class="feature-caption">ripple</figcaption>
               </figure>
             </div>
@@ -478,19 +478,19 @@
           <div class="feature-description-icons">
             <nav class="feature-icons-container horizontal-icons">
               <a href="documentation/#domAttr" class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-html.svg" />
+                <img src="documentation/assets/img/icons/icon-html.svg" alt />
                 <figcaption class="feature-caption">html</figcaption>
               </a>
               <a href="documentation/#JSobjProp" class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-js.svg" />
+                <img src="documentation/assets/img/icons/icon-js.svg" alt />
                 <figcaption class="feature-caption">js</figcaption>
               </a>
               <a href="documentation/#cssProperties" class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-css.svg" />
+                <img src="documentation/assets/img/icons/icon-css.svg" alt />
                 <figcaption class="feature-caption">css</figcaption>
               </a>
               <a href="documentation/#svgAttr" class="feature-icon">
-                <img src="documentation/assets/img/icons/icon-svg.svg" />
+                <img src="documentation/assets/img/icons/icon-svg.svg" alt />
                 <figcaption class="feature-caption">svg</figcaption>
               </a>
             </nav>
@@ -605,18 +605,18 @@
               <span class="primary arrow">예제</span>
             </a>
             <ul class="getting-statred-links">
-              <li><a class="arrow" href="http://codepen.io/collection/b392d3a52d6abf5b8d9fda4e4cab61ab/">CodePen 콜렉션</a>
-              <li><a class="arrow" href="http://juliangarnier.com">juliangarnier.com</a>
-              <li><a class="arrow" href="https://animejs.com">animejs.com</a>
-              <li><a class="arrow" href="http://tobiasahlin.com/moving-letters/">텍스트 애니메이션</a>
-              <li><a class="arrow" href="https://tympanus.net/Development/GradientTopographyAnimation/">그레디언트 지형 애니메이션</a>
-              <li><a class="arrow" href="https://tympanus.net/Development/OrganicShapeAnimations/">유기적 도형 애니메이션</a>
-              <li><a class="arrow" href="https://tympanus.net/Tutorials/PiecesSlider/">피스 슬라이더</a>
-              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/4fe31bbe8579a256e828cd4d48c86182?editors=0100">스태거 애니메이션</a>
-              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/444ed909fd5de38e3a77cc6e95fc1884">이징 애니메이션</a>
-              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/b3bb8ca599ad0f9d00dd044e56cbdea5?editors=0010">구체 애니메이션</a>
-              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/6ca836535cbea42157d1b8d56d00be84?editors=0010">레이어 애니메이션</a>
-              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/d43e8ec355c30871cbe775193255d6f6?editors=0010">anime.js 로고 애니메이션</a>
+              <li><a class="arrow" href="http://codepen.io/collection/b392d3a52d6abf5b8d9fda4e4cab61ab/">CodePen 콜렉션</a></li>
+              <li><a class="arrow" href="http://juliangarnier.com">juliangarnier.com</a></li>
+              <li><a class="arrow" href="https://animejs.com">animejs.com</a></li>
+              <li><a class="arrow" href="http://tobiasahlin.com/moving-letters/">텍스트 애니메이션</a></li>
+              <li><a class="arrow" href="https://tympanus.net/Development/GradientTopographyAnimation/">그레디언트 지형 애니메이션</a></li>
+              <li><a class="arrow" href="https://tympanus.net/Development/OrganicShapeAnimations/">유기적 도형 애니메이션</a></li>
+              <li><a class="arrow" href="https://tympanus.net/Tutorials/PiecesSlider/">피스 슬라이더</a></li>
+              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/4fe31bbe8579a256e828cd4d48c86182?editors=0100">스태거 애니메이션</a></li>
+              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/444ed909fd5de38e3a77cc6e95fc1884">이징 애니메이션</a></li>
+              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/b3bb8ca599ad0f9d00dd044e56cbdea5?editors=0010">구체 애니메이션</a></li>
+              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/6ca836535cbea42157d1b8d56d00be84?editors=0010">레이어 애니메이션</a></li>
+              <li><a class="arrow" href="https://codepen.io/juliangarnier/pen/d43e8ec355c30871cbe775193255d6f6?editors=0010">anime.js 로고 애니메이션</a></li>
             </ul>
           </div>
 
@@ -629,7 +629,7 @@
     <footer class="footer nav-bar grid-container">
       <div class="nav-bar-content">
         <a href="https://animejs.com/">
-          <img class="anime-mini-logo" src="documentation/assets/img/anime-mini-logo.svg" />
+          <img class="anime-mini-logo" src="documentation/assets/img/anime-mini-logo.svg" alt />
         </a>
         <nav class="nav-menu">
           <a class="nav-link" href="documentation">사용 설명서</a>
