홈 링크 주소 수정

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -40,7 +40,7 @@
   <body>
     <div class="content">
       <header class="header">
-        <a class="logo" href="/">
+        <a class="logo" href="/anime/">
           <img class="anime-mini-logo" src="assets/img/anime-mini-logo.svg" alt />
           <span class="version-number"></span>
         </a>
