CNAME 제거 및 yamoo9 사용자 화

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="feature-description feature-description-grid">
           <div class="feature-description-icons">
             <nav class="feature-icons-container horizontal-icons secondary-menu">
-              <a href="https://github.com/juliangarnier/anime/" class="feature-icon">
+              <a href="https://github.com/yamoo9/anime" class="feature-icon">
                 <img src="documentation/assets/img/icons/icon-github.svg" alt />
                 <figcaption class="feature-caption">GitHub</figcaption>
               </a>
@@ -112,9 +112,10 @@
                 <img src="documentation/assets/img/icons/icon-docs.svg" alt />
                 <figcaption class="feature-caption">Docs</figcaption>
               </a>
-              <a href="https://twitter.com/JulianGarnier" class="feature-icon" target="_blank">
-                <img src="documentation/assets/img/icons/icon-twitter.svg" alt />
-                <figcaption class="feature-caption">Twitter</figcaption>
+              <a href="https://facebook.com/yamoo9" class="feature-icon" target="_blank">
+                <img src="documentation/assets/img/icons/icon-facebook.svg" alt 
+                  style="width: 30px; height: 30px; margin: 10px; filter: invert(1);" />
+                <figcaption class="feature-caption">Facebook</figcaption>
               </a>
             </nav>
           </div>
